[package]
name = "cache"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "server"
# path = "src/bin/server.rs"

[dependencies]
tikv-jemallocator = "0.5.4"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
