[package]
name = "cache"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.2.0"
opentelemetry = { version = "0.20.0" }
opentelemetry-jaeger = { version = "0.19.0" }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-opentelemetry = { version = "0.21.0" }
tracing-subscriber = "0.3.17"
